# ContextWorks

./: MCP_PROTOCOL.md  Makefile  README.md  deploy.sh
backend/: .env  .gitignore  Dockerfile  README.md  config.py  debug_config.py  main.py  migration_env_vars.sql  pyproject.toml
backend/api/: dependencies.py
backend/api/routes/: auth.py  builds.py  executions.py  mcps.py  settings.py  tools.py  workspaces.py
backend/core/: database.py  db_base.py  kubernetes.py  logger.py  security.py  utils.py
backend/core/repositories/: build_repo.py  execution_repo.py  logo_repo.py  mcp_repo.py  platform_stats_repo.py  registry_repo.py  tool_repo.py  user_repo.py  workspace_repo.py
backend/docs/: api_reference.md  architecture.md  deployment.md  tools_system.md
backend/models/: auth.py  mcp.py  registry.py  tool.py  workspace.py
backend/scripts/legacy/: migration_service.py
backend/scripts/setup/: create_admin.py
backend/services/: docker_build_service.py  execution_service.py  mcp_manager.py  mcp_server.py  tool_service.py
backend/services/docker/: build_engine.py  image_builder.py  kaniko_builder.py  registry_adapter.py
backend/services/execution/: k8s_adapter.py  resolver.py
backend/services/tool/: content_handler.py
backend/tests/: test_nikto_scan.py  test_nmap_scan.py  test_yaml_gen.py
backend/tools/Network/: nmap_scan.py  nmap_scan.yaml
backend/tools/Web/: nikto_scan.py  nikto_scan.yaml
cli/: Makefile  README.md  cmd_login.go  cmd_pull.go  cmd_sync.go  cmd_update.go  go.mod  go.sum  main.go  sync_logic.go
docs/: enterprise_security.md  (+1 more)
(+289 files in other folders)
